Hasta aqui se hace poperty binding, pero sin evento, solo lo basico y se usa tiempo

--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -1,2 +1,12 @@
-<h1></h1>
-<app-persona></app-persona>
+
+<div class="container">
+    <div class ="row">
+        <div class="col">
+            <h1>Listado Personas</h1>
+            <!-- Asociamos la propiedad disabled con una propiedad del .ts, disabled va a depender del valor de agregarPersona que es un atributo-->
+            <button class="btn btn-primary" 
+            [disabled]="!agregarPersona">Agrear Persona</button>
+           
+        </div>        
+    </div>
+</div>
