--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -8,7 +8,7 @@
             <input
             type="text"
             class="form-control"
-            (input)="onModificarPersona($event)">
+            [(ngModel)]="tituloPersona"            >
             
             <button class="btn btn-primary" 
             [disabled]="!agregarPersona"
