Se agrega el modelo persona, se hace comunicación entre componentes @Input(), ngFor, arreglos de personas, Flujo de ejecución descrito en word

--- a/src/app/persona/persona.component.html
+++ b/src/app/persona/persona.component.html
@@ -1,3 +1,3 @@
-<p>
-    Nombre: {{nombrePersona}} {{apellidoPersona}} Edad: {{getEdad()+33}}+1
-</p>
+<div >
+    {{indice+1}} Nombre: {{persona.nombre}} {{persona.apellido}} Edad: {{persona.edad}}
+   </div>
